[gd_scene load_steps=4 format=3 uid="uid://dkcocdnw0gxtc"]

[ext_resource type="Script" uid="uid://bmtbrcbj2j16l" path="res://obstacles/spike.gd" id="1_6id6k"]
[ext_resource type="Texture2D" uid="uid://ddscst2bxernn" path="res://assets/images/kinda_cute_forest/tileset.png" id="2_7w2no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w2no"]
size = Vector2(12, 10)

[node name="Spike" type="Node2D" node_paths=PackedStringArray("area2d")]
script = ExtResource("1_6id6k")
area2d = NodePath("Area2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_7w2no")
region_enabled = true
region_rect = Rect2(80, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_7w2no")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -10)
rect = Rect2(-8, -2, 16, 12)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
